update to mordern implementation of day85